# wd14-tagger-standalone

./: .dockerignore  .env.example  .gitignore  API.md  Dockerfile  Dockerfile.minimal  README-CLOUD.md  README.md  SCHEMA.md  camie-reformat.py  main.py  pyproject.toml  requirements-cloud.txt  requirements.txt  run.py  setup_models.py  test_cloud_function.py  test_function.py  test_whash.py  vector_generator.py
scripts/: check_all.py  check_gcs.py  check_logs.py  check_qdrant.py  manage_qdrant.py  model_cache.py  publish_to_pubsub.py  test_full_workflow.py  test_insert.py  test_main_vector_generation.py  test_qdrant_connection.py
tagger/: __init__.py  api.py  cli.py  vocabulary.py
tagger/interrogator/: __init__.py  camietaggerinterrogator.py  interrogator.py  mldanbooruinterrogator.py  waifudiffusioninterrogator.py
tests/: conftest.py  test_api_enhanced.py  test_run.py
tests/tagger/: __init__.py
tests/tagger/interrogator/: __init__.py  test_camietaggerinterrogator.py  test_interrogator.py  test_waifudiffusioninterrogator.py
